--- a/index.html
+++ b/index.html
@@ -4,45 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jun's personal site</title>
+    <title>jun hua</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favico.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td><img src="image/images.png" alt="profile puture"></td>
-            <td>
-                <h1>Cloud Lovers</h1>
-                <p><em>I like <strong>aws,azure,gcp</strong>.</em></p>
-                <p>I am an IOS and web development.</p>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <h3>Books and teaching</h3>
-    <ul>
-        <li>The Complete</li>
-        <li>The animial</li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-        <th>
-            <tr>
-                <td>Date</td>
-                <td>Work</td>
-            </tr>
-        </th>
-        <tr>
-            <td>2009-2010</td>
-            <td>Research  at the institute</td>
-        </tr>
-        <tr>
-            <td>2010-2013</td>
-            <td>chinese  at the institute</td>
-        </tr>
-    </table>
-    <hr>
-    <a href="hobbies.html">My hobbies</a>
-    <a href="contact.html">My contact</a>
+    <div class="top-container">
+        <img class="top-cloud" src="image/cloud.png" alt="cloud-img">
+        <h1>I am Junhua</h1>
+        <h2>I am a programer</h2>
+        <img class="bottom-cloud" src="image/cloud.png" alt="cloud-img">
+        <img src="image/mountain.png" alt="cloud-img">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+          <img src="image/man.png" alt="man-img">
+          <h2>Hello.</h2>
+          <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        </div>
+        <hr>
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="code-img" src="image/skills.png" alt="skills-img">
+            <h3>Lorem & Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          </div>
+          <div class="skill-row">
+            <img class="chilli-img" src="image/effort.png" alt="">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+          <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+      </div>
+      
+      
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p class="copyright">© Name Surname.</p>
+      </div>
 </body>
 </html>
